fixing horizontal scroll prob

--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -47,3 +47,11 @@
 	}
 }
 
+
+@media (max-width: 450px) {
+	.works{
+		.services{
+			grid-template-columns: 1fr;
+		}	
+	}
+}
